--- a/css/header.css
+++ b/css/header.css
@@ -105,7 +105,7 @@ body{
     background-color: #E8E8E8;
     padding-right: 30px;
     align-items: center;
-    
+
 }
 
 /* icon */
@@ -118,7 +118,7 @@ body{
 /* NIKE IMG */
 .nike-img{
     display: block;
-    width          
+    /* width           */
 
 }
 
